--- a/sistema.html
+++ b/sistema.html
@@ -24,17 +24,30 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item ml-3 ">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-user"></i>Usuários</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> Usuários</a>
                 </li>
                 <li class="nav-item ml-3 ">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-percent"></i>Promoção</a>
+                    <a class="nav-link" href="src/tipos/view/list-tipo.html"><i class="fa-solid fa-user"></i> Tipos de Usuários</a>
+                </li>
+                <li class="nav-item ml-3 ">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-percent"></i> Promoção</a>
                 </li>
                 <li class="nav-item ml-3">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-award"></i>Prêmio</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-award"></i> Prêmio</a>
                 </li>
             </ul>
+            <a href="#" class="nav-link text-white"><i class="fa-solid fa-right-from-bracket"></i> Sair do Sistema</a>
         </div>
     </nav>
+    <div id="content" class="container mt-5">
+        <div class="row mt-5">
+            <div class="col-12 text-center mt-5">
+                <h4 class="text-center text-warning">
+                    Bem vindo ao Sistema de Gerenciamento de Rifas
+                </h4>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="libs/js/jquery-3.6.0.js"></script>
 <script src="libs/js/bootstrap.js"></script>
