--- a/sistema.html
+++ b/sistema.html
@@ -51,5 +51,6 @@
 </body>
 <script src="libs/js/jquery-3.6.0.js"></script>
 <script src="libs/js/bootstrap.js"></script>
+<script src="libs/js/link-menu.js"></script>
 
 </html>
