início do projeto

--- a/sistema.html
+++ b/sistema.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="libs/css/bootstrap.css">
     <link rel="stylesheet" href="libs/css/rifas.css">
+    <link rel="stylesheet" href="libs/dataTables/datatables.css">
     <link rel="shortcut icon" href="img/ticket.png" type="image/x-icon">
     <link rel="stylesheet" href="libs/fontawesome/css/all.css">
     <title>Gerenciamento</title>
@@ -54,7 +55,7 @@
 <script src="libs/js/bootstrap.js"></script>
 <script src="libs/js/link-menu.js"></script>
 <script src="libs\sweetAlert2\dist\sweetalert2.all.js"></script>
-<script src="libs/DataTables/datatables.js"></script>
+<script src="libs\DataTables\datatables.js"></script>
 <script src="libs/FontAwesome/js/all.js"></script>
 
 </html>
