--- a/sistema.html
+++ b/sistema.html
@@ -55,7 +55,7 @@
 <script src="libs/js/bootstrap.js"></script>
 <script src="libs/js/link-menu.js"></script>
 <script src="libs\sweetAlert2\dist\sweetalert2.all.js"></script>
-<script src="libs\DataTables\datatables.js"></script>
+<script src=".\libs\DataTables\datatables.js"></script>
 <script src="libs/FontAwesome/js/all.js"></script>
 
 </html>
