--- a/sistema.html
+++ b/sistema.html
@@ -27,7 +27,10 @@
                 <li class="nav-item ml-3 ">
                     <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> Usuários</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-3 ">
+                    <a class="nav-link" href="src\compradores\view\list-compradores.html"><i class="fa-solid fa-user"></i> Compradores </a>
+                </li>
+                <li class="nav-item ml-3">
                     <a class="nav-link " href="src/tipo/view/list-tipo.html"><i class="fa-solid fa-user-gear"></i> Tipo Usuarios</a>
                 </li>
                 <li class="nav-item ml-3 ">
