--- a/sistema.html
+++ b/sistema.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item ml-3 ">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> Usuários</a>
+                    <a class="nav-link" href="src/vendedor/view/list-vendedor.html"><i class="fa-solid fa-sack-dollar"></i> Vendedor</a>
                 </li>
                 <li class="nav-item ml-3 ">
                     <a class="nav-link" href="src\compradores\view\list-compradores.html"><i class="fa-solid fa-user"></i> Compradores </a>
